--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html,body,.main {
     margin: 0;
     overflow: hidden;
     font-size: 16px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .main {
@@ -31,22 +32,52 @@ html,body,.main {
 
 .sidebar {
     background-color: #0ea5e9;
-    width: 100%;
     grid-row: 1/3;
     grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    padding-left: 1vw;
+    padding-top: 1vh;
 }
 
 .main-icon {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     filter:invert();
 }
+
 .icon {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     filter:invert();
 }
 
 .sidebar button, .sidebar {
     background-color: #0ea5e9;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-weight: 500;
+}
+
+.sidebar button {
+    display: flex;
+    width: min-content;
+    gap: 1vw;
+    border: 0;
+    align-items: center;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+#dashboard {
+    font-size: 1.5rem;
+}
+
+#home, #settings {
+    margin-top: 2vh;
+}
+
+.sidebar button:hover {
+    background: rgb(255,255,255,0.5);
 }
