--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
+:root {
+    --gray: #d6dee7;
+    --blue: #0ea5e9;
+    --light-blue: #87c0db;
+}
+
 
 html,body,.main {
     height: 100vh;
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+}
+
+button {
+    cursor: pointer;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -13,25 +24,8 @@ html,body,.main {
     grid-template-columns: 1fr 5fr;
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    background-color: white;
-    align-items: center;
-    width: 100%;
-    grid-row: 1/2;
-    grid-column: 2/3;
-}
-
-.content {
-    background-color: #cbd5e1;
-    width: 100%;
-    grid-row: 2/3;
-    grid-column: 2/3;
-}
-
 .sidebar {
-    background-color: #0ea5e9;
+    background-color: var(--blue);
     grid-row: 1/3;
     grid-column: 1/2;
     display: flex;
@@ -39,6 +33,7 @@ html,body,.main {
     gap: 1vh;
     padding-left: 1vw;
     padding-top: 1vh;
+    z-index: 1;
 }
 
 .main-icon {
@@ -78,6 +73,90 @@ html,body,.main {
     margin-top: 2vh;
 }
 
-.sidebar button:hover {
-    background: rgb(255,255,255,0.5);
+.header {
+    background-color: white;
+    grid-row: 1/2;
+    grid-column: 2/3;
+    padding: 2vh 2vw;
+    box-shadow: 3px 3px 5px rgb(0,0,0,0.1);
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.header-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.top-header,.bottom-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.top-right,.top-left,.bottom-left,.bottom-right {
+    display: flex;
+    align-items: center;
+}
+
+.profile-pic-top {
+    width: 60px;
+}
+
+.profile-pic-bottom {
+    width: 100px;
+}
+
+.content {
+    background-color: var(--gray);
+    width: 100%;
+    grid-row: 2/3;
+    grid-column: 2/3;
+}
+
+.top-left, .top-right {
+    gap: 1vw;
+}
+
+.search {
+    background-color: var(--gray);
+    border: 0;
+    border-radius: 10px;
+    padding: 0.5vh 1vw;
+    outline: none;
+    width: 40vw;
+}
+
+.hi-there p, .top-right p {
+    margin: 0;
+    font-weight: 600;
+}
+
+.hi-there {
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
+
+.bottom-header {
+    margin-top: 20px;
+}
+
+.bottom-right {
+    display: flex;
+    gap: 20px;
+}
+
+.bottom-right button {
+    color: white;
+    background-color: var(--blue);
+    border: 0;
+    padding: 10px 30px;
+    border-radius: 50px;
+    font-size: 0.9rem;
+}
+
+.hi-there p:last-of-type {
+    font-size: 1.3rem;
 }
