--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     --accent:rgb(226,120,56);
 }
 
-
 html,body,.main {
     height: 100vh;
     margin: 0;
@@ -119,7 +118,7 @@ button {
     border: 0;
     border-radius: 10px;
     padding: 0.5vh 1vw;
-    outline: none;
+    outline-color: var(--blue);
     width: 40vw;
 }
 
@@ -175,13 +174,13 @@ button:hover {
     gap: 2vw;
 }
 
-.projects, .announcements {
+.projects, .announcements, .trending {
     display: flex;
     flex-direction: column;
     gap: 2vh;
 }
 
-.your_projects, .your_announcements {
+.your_projects, .your_announcements, .your_trending {
     font-weight: 500;
     font-size: 1.2rem;
 }
@@ -194,7 +193,6 @@ button:hover {
 }
 
 .project {
-    background-color: white;
     text-wrap: wrap;
     width: 20vw;
     display: flex;
@@ -203,7 +201,6 @@ button:hover {
     padding: 2vw;
     gap: 3vh;
     border-left: 0.5vw var(--accent) solid;
-    border-radius: 8px;
 }
 
 .icons {
@@ -245,10 +242,8 @@ button:hover {
 .announcements-container {
     display: flex;
     flex-direction: column;
-    background-color: white;
     height: min-content;
-    width: 20vw;
-    border-radius: 8px;
+    width: 18vw;
     padding: 3vh 2vh;
     gap: 1vh;
 }
@@ -261,6 +256,52 @@ button:hover {
     border-bottom: var(--gray) 1px solid;
 }
 
-.project, .announcements-container {
+
+.project, .announcements-container, .trending_container {
     box-shadow: 3px 3px 3px rgb(0,0,0,0.1);
+    background-color: white;
+    border-radius: 8px;
+}
+
+.content-right {
+    display: flex;
+    flex-direction: column;
+    /* gap: 3vh; */
+    justify-content: space-between;
+}
+
+.trending_container {
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+    height: min-content;
+    width: 18vw;
+    padding: 4vh 2vh;
+}
+
+.profile {
+    display: flex;
+    gap: 1vw;
+    align-items: center;
+}
+
+.profile-text p {
+    margin: 0;
+    font-size: 0.9rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.profile img {
+    margin-left: 10px;
+}
+
+.profile-text p:last-child {
+    font-size: 0.9rem;
+    color: gray;
+    font-family: 'Roboto', sans-serif;
+}
+
+.profile-icon {
+    width: 40px;
+    height: 40px;
 }
